--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "version": "0.1",
 
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "img/icon.png",
         "default_popup": "popup.html"
     },
 
